# dapps-on-ckb-workshop-code

./: README.md
nft-glue/: .gitignore  config.json  package.json  tsconfig.json
nft-glue/src/: addresses.ts  index.ts
nft-glue/src/data/: alice.txt  bob.txt  charlie.txt
nft-validator/: .gitignore  Cargo.toml  capsule.toml  deployment.toml
nft-validator/contracts/nft-validator/: Cargo.toml
nft-validator/contracts/nft-validator/src/: entry.rs  error.rs  main.rs
nft-validator/tests/: Cargo.toml
nft-validator/tests/src/: tests.rs
