[package]
name = "nft-validator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b-ref = "0.1.0"
ckb-std = "0.4.1"

[profile.release]
overflow-checks = true
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
